Implemented flattened strategy for arbitrary hierarchy of objects